# Changelog

## 31.0.9 - 2025-09-29

* update to nextcloud 31.0.9

## 30.0.16 - 2025-09-29

* update to nextcloud 30.0.16
* add music app

## 30.0.6 - 2025-02-27

* update to nextcloud 30.0.6

## 30.0.5 - 2025-01-27

* update to nextcloud 30.0.5

## 29.0.11 - 2025-01-21

* update to nextcloud 29.0.11

## 29.0.9 - 2024-11-26

* update to nextcloud 29.0.9
* upgrade php from 8.2 to 8.3
* update apps to latest

## 29.0.7 - 2024-09-19

* update to nextcloud 29.0.7
* update apps to latest

## 28.0.10 - 2024-09-13

* update to nextcloud 28.0.10
* fix multiple file download
* align with deprecation

## 28.0.8 - 2024-07-24

* update to nextcloud 28.0.8
* remove emlviewer (issues with nc28)
* use latest base image

## 28.0.7 - 2024-07-11

* update to nextcloud 28.0.7
* change fpm serer config
* use latest base image

## 28.0.6 - 2024-06-20

* update to nextcloud 28.0.6
* fix install script
* extend nginx.conf

## 27.1.8 - 2024-04-03

* update to nextcloud 27.1.8
* build image on base 20240116
* update apps to latest
* remove unsuppoted apps

## 26.0.8 - 2023-11-23

* update to nextcloud 26.0.8
* fix php-fpm conf path
* use latest qutic-base image

## 26.0.5 - 2023-08-14

* update to nextcloud 26.0.5
* add fpm_max_worker parameter
* remove any mac double files
* use install_nc_version script
* update apps to latest
* upgrade php from 8.0 to 8.2
* make nginx the default webserver

## 26.0.2.1 - 2023-06-11

* add missing sysvsem package
* fix app version

## 26.0.2 - 2023-06-09

* update to nextcloud 26.0.2
* apporder is no longer working

## 25.0.5 - 2023-04-07

* update to nextcloud 25.0.5
* use latest base image

## 24.0.9 - 2023-02-04

* update to nextcloud 24.0.9

## 24.0.8 - 2022-12-09

* use latest base image
* update to nextcloud 24.0.8

## 24.0.6 - 2022-10-08

* use latest base image
* update to nextcloud 24.0.6

## 24.0.5

* use latest base image
* update apps to latest
* change naming convetion for image version
* update to nextcloud 24.0.5
* include bbb-app
