@@ -6,7 +6,7 @@
 if mdata-get mail_adminaddr 1>/dev/null 2>&1; then
   # Configure PHP sendmail return-path if possible
   echo "php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f $(mdata-get mail_adminaddr)" \
-    >> /opt/local/etc/php-fpm.d/www.conf
+    >> /opt/local/etc/php/8.3/php-fpm.d/www.conf
 fi
 
 sed -i "s:nc.example.com:$(mdata-get server_name):g" /opt/local/etc/nginx/nginx.conf
@@ -36,7 +36,7 @@ if [[ `mdata-get nginx_fpm 2>/dev/null` = "false" ]]; then
   
   # Enable apache
   /usr/sbin/svcadm enable svc:/pkgsrc/apache:default
-  echo "/opt/local/bin/sed -i \"s#/var/log/php-fpm.log.*##\" /etc/logadm.conf" >> /opt/local/bin/uptodate 
+  echo "/opt/local/bin/sed -i \"s#/var/log/php-fpm83.log.*##\" /etc/logadm.conf" >> /opt/local/bin/uptodate
 
 else
   #################################
@@ -47,7 +47,7 @@ else
   /usr/sbin/svcadm disable apache || true
   
   # Enable PHP-FPM
-  /usr/sbin/svcadm enable svc:/pkgsrc/php-fpm:default
+  /usr/sbin/svcadm enable svc:/pkgsrc/php-fpm83:default
   /usr/sbin/svcadm enable nginx
   echo "/opt/local/bin/sed -i \"s#/var/log/nginx/.*##\" /etc/logadm.conf" >> /opt/local/bin/uptodate
 
